# HyperAgent

./: .cursorrules  .gitignore  AGENTS.md  AGENT_REDESIGN_PLAN.md  API_DOCUMENTATION.md  API_REDESIGN_IMPLEMENTATION_PLAN.md  CLAUDE.md  README.md  currentState.md  improvement-plan.md  jest.config.cjs  jest.config.js  jest.config.ts  package-lock.json  package.json  script-readme.md  test-tool-types.ts  test-types.ts  tsconfig.json
.github/: copilot-instructions.md  pull_request_template.md
.husky/: commit-msg  pre-commit
apps/spreadsheet-core-rs/: Cargo.toml  README.md
apps/spreadsheet-core-rs/.cargo/: config.toml
apps/spreadsheet-core-rs/fixtures/: compat_baseline.xlsx  compat_default_cached_formula.xlsx  compat_error_cached_formula.xlsx  compat_formula_matrix.xlsx  compat_formula_only_dual.xlsx  compat_formula_only_normalized.xlsx  compat_formula_only_offset_normalized.xlsx  compat_formula_only_sheet.xlsx  compat_mixed_literal_prefix.xlsx  compat_normalization.xlsx  compat_normalization_single.xlsx  compat_offset_range.xlsx  compat_prefix_operator.xlsx  compat_unsupported_formula.xlsx
apps/spreadsheet-core-rs/src/: api.rs  error.rs  fixture_corpus.rs  formula.rs  main.rs  models.rs  state.rs  store.rs  xlsx.rs
docs/: api-ergonomics-roadmap.md  api-ergonomics.md  bottleneck-remediation-plans.md  cdp-architecture-overview.md  cdp-overview.md  cdp-session-audit-summary.md  cdp-session-lifecycle-audit.md  phase1-generic-cdp-plan.md  phase1-todos.md  phase2-cdp-element-location.md  phase2-todos.md  phase3-cdp-connection-plan.md  phase3-cdp-frame-management.md  (+4 more)
(+300 files in other folders)
