[package]
name = "spreadsheet-core-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.95"
axum = { version = "=0.8.1", features = ["macros", "json", "multipart"] }
base64 = "0.22.1"
calamine = "=0.24.0"
chrono = { version = "=0.4.43", features = ["clock", "serde"] }
comfy-table = "=7.1.2"
duckdb = { package = "frozen-duckdb", version = "=0.1.0" }
futures-util = "0.3.31"
regex = "1.11.1"
rust_xlsxwriter = "=0.80.0"
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.138"
sha2 = "0.10.8"
tempfile = "=3.15.0"
tokio = { version = "=1.43.0", features = ["full"] }
tokio-stream = { version = "=0.1.17", features = ["sync"] }
tower-http = { version = "=0.6.2", features = ["cors", "trace"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
uuid = { version = "=1.12.1", features = ["serde", "v4"] }
